syntax = "proto3";

package diabetHelper;

option go_package = "/;diabetHelper";

service DiabetHelper {
  rpc AddSL(AddSLRequest) returns (SugarLevel);
  rpc UpdateSL(UpdateSLRequest) returns (SugarLevel);
  rpc FindSL(FindSLRequest) returns (SugarLevels);

  rpc AddUser(AddUserRequest) returns (User);
  rpc FindUser(FindUserRequest) returns (Users);
  rpc UpdateUser(UpdateUserRequest) returns (User);
}

message AddUserRequest {
  int64 id = 1;
  string username = 2;
  string first_name = 3;
  string last_name = 4;
  string language_code = 5;
}

message UpdateUserRequest {
  int64 id = 1;
  string username = 2;
  string first_name = 3;
  string last_name = 4;
  string language_code = 5;
}

message User {
  int64 id = 1;
  string username = 2;
  string first_name = 3;
  string last_name = 4;
  string language_code = 5;
}

message Users {
  uint32 pages_count = 1;
  uint32 total_items = 2;
  uint32 per_page = 3;

  repeated User data = 4;
}

message FindUserRequest {
  Pagination pagination = 100;

  int64 id = 1;
  string username = 2;
  string first_name = 3;
  string last_name = 4;
  string language_code = 5;
}

message AddSLRequest {
  int64 user_id = 1;
  string value = 2;
}

message UpdateSLRequest {
  int64 user_id = 1;
  string value = 2;
}

message FindSLRequest {
  Pagination pagination = 1;

  int64 user_id = 2;
  string value = 3;
  int64 created_at_start = 5;
  int64 created_at_finish = 6;
}

message SugarLevels {
  uint32 pages_count = 1;
  uint32 total_items = 2;
  uint32 per_page = 3;

  repeated SugarLevel data = 4;
}

message SugarLevel {
  int64 user_id = 1;
  string value = 2;
  int64 created_at = 3;
  int64 updated_at = 4;
}

message Ok {
  bool value = 1;
}

message Pagination {
  uint32 page = 1;
  int32 limit = 2;
  uint32 offset = 3;
}